// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`CompressionPlugin should run plugin against assets added later by plugins: assets 1`] = `
[
  [
    "main.js",
    1843,
    {
      "javascriptModule": false,
      "related": {
        "gzipped": "main.js.gz",
      },
      "size": 1843,
    },
  ],
  [
    "main.js.gz",
    585,
    {
      "compressed": true,
      "size": 585,
    },
  ],
  [
    "newFile.js",
    23,
    {
      "related": {
        "gzipped": "newFile.js.gz",
      },
      "size": 23,
    },
  ],
  [
    "newFile.js.gz",
    43,
    {
      "compressed": true,
      "size": 43,
    },
  ],
]
`;

exports[`CompressionPlugin should run plugin against assets added later by plugins: errors 1`] = `[]`;

exports[`CompressionPlugin should run plugin against assets added later by plugins: warnings 1`] = `[]`;

exports[`CompressionPlugin should work and do not use memory cache when the "cache" option is "false": assets 1`] = `
[
  [
    "async.async.js",
    194,
    {
      "javascriptModule": false,
      "related": {
        "gzipped": "async.async.js.gz",
      },
      "size": 194,
    },
  ],
  [
    "async.async.js.gz",
    136,
    {
      "compressed": true,
      "size": 136,
    },
  ],
  [
    "icon.png",
    78117,
    {
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  [
    "icon.svg",
    672,
    {
      "related": {
        "gzipped": "icon.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "icon.svg.gz",
    390,
    {
      "compressed": true,
      "size": 390,
    },
  ],
  [
    "main.js",
    16165,
    {
      "javascriptModule": false,
      "related": {
        "gzipped": "main.js.gz",
      },
      "size": 16165,
    },
  ],
  [
    "main.js.gz",
    4011,
    {
      "compressed": true,
      "size": 4011,
    },
  ],
]
`;

exports[`CompressionPlugin should work and do not use memory cache when the "cache" option is "false": assets 2`] = `
[
  [
    "async.async.js",
    194,
    {
      "javascriptModule": false,
      "related": {
        "gzipped": "async.async.js.gz",
      },
      "size": 194,
    },
  ],
  [
    "async.async.js.gz",
    136,
    {
      "compressed": true,
      "size": 136,
    },
  ],
  [
    "icon.png",
    78117,
    {
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  [
    "icon.svg",
    672,
    {
      "related": {
        "gzipped": "icon.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "icon.svg.gz",
    390,
    {
      "compressed": true,
      "size": 390,
    },
  ],
  [
    "main.js",
    16165,
    {
      "javascriptModule": false,
      "related": {
        "gzipped": "main.js.gz",
      },
      "size": 16165,
    },
  ],
  [
    "main.js.gz",
    4011,
    {
      "compressed": true,
      "size": 4011,
    },
  ],
]
`;

exports[`CompressionPlugin should work and do not use memory cache when the "cache" option is "false": errors 1`] = `[]`;

exports[`CompressionPlugin should work and do not use memory cache when the "cache" option is "false": errors 2`] = `[]`;

exports[`CompressionPlugin should work and do not use memory cache when the "cache" option is "false": warnings 1`] = `[]`;

exports[`CompressionPlugin should work and do not use memory cache when the "cache" option is "false": warnings 2`] = `[]`;

exports[`CompressionPlugin should work and keep assets info: assets 1`] = `
[
  [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    {
      "immutable": true,
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    {
      "immutable": true,
      "related": {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    390,
    {
      "compressed": true,
      "immutable": true,
      "size": 390,
    },
  ],
  [
    "async.async.cd3aed5809a2faa4eb5a.js",
    194,
    {
      "contenthash": "cd3aed5809a2faa4eb5a",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "gzipped": "async.async.cd3aed5809a2faa4eb5a.js.gz",
      },
      "size": 194,
    },
  ],
  [
    "async.async.cd3aed5809a2faa4eb5a.js.gz",
    136,
    {
      "compressed": true,
      "immutable": true,
      "size": 136,
    },
  ],
  [
    "main.5ad416665efd38367419.js",
    16252,
    {
      "contenthash": "5ad416665efd38367419",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "gzipped": "main.5ad416665efd38367419.js.gz",
      },
      "size": 16252,
    },
  ],
  [
    "main.5ad416665efd38367419.js.gz",
    4095,
    {
      "compressed": true,
      "immutable": true,
      "size": 4095,
    },
  ],
]
`;

exports[`CompressionPlugin should work and keep assets info: errors 1`] = `[]`;

exports[`CompressionPlugin should work and keep assets info: warnings 1`] = `[]`;

exports[`CompressionPlugin should work and show compress assets in stats: assets 1`] = `
[
  [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    {
      "immutable": true,
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    {
      "immutable": true,
      "related": {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    390,
    {
      "compressed": true,
      "immutable": true,
      "size": 390,
    },
  ],
  [
    "async.async.js",
    194,
    {
      "javascriptModule": false,
      "related": {
        "gzipped": "async.async.js.gz",
      },
      "size": 194,
    },
  ],
  [
    "async.async.js.gz",
    136,
    {
      "compressed": true,
      "size": 136,
    },
  ],
  [
    "main.js",
    16221,
    {
      "javascriptModule": false,
      "related": {
        "gzipped": "main.js.gz",
      },
      "size": 16221,
    },
  ],
  [
    "main.js.gz",
    4077,
    {
      "compressed": true,
      "size": 4077,
    },
  ],
]
`;

exports[`CompressionPlugin should work and show compress assets in stats: errors 1`] = `[]`;

exports[`CompressionPlugin should work and show compress assets in stats: warnings 1`] = `[]`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true" and the asset has been changed which filtered by the "minRation" option: assets 1`] = `
[
  [
    "async.js",
    194,
    {
      "javascriptModule": false,
      "related": {
        "gzipped": "async.js.gz",
      },
      "size": 194,
    },
  ],
  [
    "async.js.gz",
    136,
    {
      "compressed": true,
      "size": 136,
    },
  ],
  [
    "icon.png",
    78117,
    {
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  [
    "icon.svg",
    672,
    {
      "related": {
        "gzipped": "icon.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "icon.svg.gz",
    390,
    {
      "compressed": true,
      "size": 390,
    },
  ],
  [
    "main.js",
    16149,
    {
      "javascriptModule": false,
      "related": {
        "gzipped": "main.js.gz",
      },
      "size": 16149,
    },
  ],
  [
    "main.js.gz",
    4008,
    {
      "compressed": true,
      "size": 4008,
    },
  ],
]
`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true" and the asset has been changed which filtered by the "minRation" option: assets 2`] = `
[
  [
    "async.js",
    194,
    {
      "javascriptModule": false,
      "related": {
        "gzipped": "async.js.gz",
      },
      "size": 194,
    },
  ],
  [
    "async.js.gz",
    136,
    {
      "compressed": true,
      "size": 136,
    },
  ],
  [
    "icon.png",
    94117,
    {
      "related": {
        "gzipped": "icon.png.gz",
      },
      "size": 94117,
      "sourceFilename": "icon.png",
    },
  ],
  [
    "icon.png.gz",
    73650,
    {
      "compressed": true,
      "size": 73650,
    },
  ],
  [
    "icon.svg",
    672,
    {
      "related": {
        "gzipped": "icon.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "icon.svg.gz",
    390,
    {
      "compressed": true,
      "size": 390,
    },
  ],
  [
    "main.js",
    16149,
    {
      "javascriptModule": false,
      "related": {
        "gzipped": "main.js.gz",
      },
      "size": 16149,
    },
  ],
  [
    "main.js.gz",
    4008,
    {
      "compressed": true,
      "size": 4008,
    },
  ],
]
`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true" and the asset has been changed which filtered by the "minRation" option: errors 1`] = `[]`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true" and the asset has been changed which filtered by the "minRation" option: errors 2`] = `[]`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true" and the asset has been changed which filtered by the "minRation" option: warnings 1`] = `[]`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true" and the asset has been changed which filtered by the "minRation" option: warnings 2`] = `[]`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true" and the asset has been changed: assets 1`] = `
[
  [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    {
      "immutable": true,
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    {
      "immutable": true,
      "related": {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    390,
    {
      "compressed": true,
      "immutable": true,
      "size": 390,
    },
  ],
  [
    "async.js",
    194,
    {
      "javascriptModule": false,
      "related": {
        "gzipped": "async.js.gz",
      },
      "size": 194,
    },
  ],
  [
    "async.js.gz",
    136,
    {
      "compressed": true,
      "size": 136,
    },
  ],
  [
    "main.js",
    16205,
    {
      "javascriptModule": false,
      "related": {
        "gzipped": "main.js.gz",
      },
      "size": 16205,
    },
  ],
  [
    "main.js.gz",
    4074,
    {
      "compressed": true,
      "size": 4074,
    },
  ],
]
`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true" and the asset has been changed: assets 2`] = `
[
  [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    {
      "immutable": true,
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    {
      "immutable": true,
      "related": {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    390,
    {
      "compressed": true,
      "immutable": true,
      "size": 390,
    },
  ],
  [
    "async.js",
    194,
    {
      "javascriptModule": false,
      "related": {
        "gzipped": "async.js.gz",
      },
      "size": 194,
    },
  ],
  [
    "async.js.gz",
    136,
    {
      "compressed": true,
      "size": 136,
    },
  ],
  [
    "main.js",
    16242,
    {
      "javascriptModule": false,
      "related": {
        "gzipped": "main.js.gz",
      },
      "size": 16242,
    },
  ],
  [
    "main.js.gz",
    4095,
    {
      "compressed": true,
      "size": 4095,
    },
  ],
]
`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true" and the asset has been changed: errors 1`] = `[]`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true" and the asset has been changed: errors 2`] = `[]`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true" and the asset has been changed: warnings 1`] = `[]`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true" and the asset has been changed: warnings 2`] = `[]`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true" with multiple plugins: assets 1`] = `
[
  [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    {
      "immutable": true,
      "related": {
        "customed": "09a1a1112c577c2794359715edfcb5ac.png.custom",
      },
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  [
    "09a1a1112c577c2794359715edfcb5ac.png.custom",
    78117,
    {
      "compressed": true,
      "immutable": true,
      "size": 78117,
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    {
      "immutable": true,
      "related": {
        "brotliCompressed": "23fc1d3ac606d117e05a140e0de79806.svg.br",
        "customed": "23fc1d3ac606d117e05a140e0de79806.svg.custom",
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg.br",
    363,
    {
      "compressed": true,
      "immutable": true,
      "size": 363,
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg.custom",
    672,
    {
      "compressed": true,
      "immutable": true,
      "size": 672,
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    390,
    {
      "compressed": true,
      "immutable": true,
      "size": 390,
    },
  ],
  [
    "async.js",
    194,
    {
      "javascriptModule": false,
      "related": {
        "brotliCompressed": "async.js.br",
        "customed": "async.js.custom",
        "gzipped": "async.js.gz",
      },
      "size": 194,
    },
  ],
  [
    "async.js.br",
    123,
    {
      "compressed": true,
      "size": 123,
    },
  ],
  [
    "async.js.custom",
    194,
    {
      "compressed": true,
      "size": 194,
    },
  ],
  [
    "async.js.gz",
    136,
    {
      "compressed": true,
      "size": 136,
    },
  ],
  [
    "main.js",
    16205,
    {
      "javascriptModule": false,
      "related": {
        "brotliCompressed": "main.js.br",
        "customed": "main.js.custom",
        "gzipped": "main.js.gz",
      },
      "size": 16205,
    },
  ],
  [
    "main.js.br",
    3552,
    {
      "compressed": true,
      "size": 3552,
    },
  ],
  [
    "main.js.custom",
    16205,
    {
      "compressed": true,
      "size": 16205,
    },
  ],
  [
    "main.js.gz",
    4074,
    {
      "compressed": true,
      "size": 4074,
    },
  ],
]
`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true" with multiple plugins: assets 2`] = `
[
  [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    {
      "immutable": true,
      "related": {
        "customed": "09a1a1112c577c2794359715edfcb5ac.png.custom",
      },
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  [
    "09a1a1112c577c2794359715edfcb5ac.png.custom",
    78117,
    {
      "compressed": true,
      "immutable": true,
      "size": 78117,
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    {
      "immutable": true,
      "related": {
        "brotliCompressed": "23fc1d3ac606d117e05a140e0de79806.svg.br",
        "customed": "23fc1d3ac606d117e05a140e0de79806.svg.custom",
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg.br",
    363,
    {
      "compressed": true,
      "immutable": true,
      "size": 363,
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg.custom",
    672,
    {
      "compressed": true,
      "immutable": true,
      "size": 672,
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    390,
    {
      "compressed": true,
      "immutable": true,
      "size": 390,
    },
  ],
  [
    "async.js",
    194,
    {
      "javascriptModule": false,
      "related": {
        "brotliCompressed": "async.js.br",
        "customed": "async.js.custom",
        "gzipped": "async.js.gz",
      },
      "size": 194,
    },
  ],
  [
    "async.js.br",
    123,
    {
      "compressed": true,
      "size": 123,
    },
  ],
  [
    "async.js.custom",
    194,
    {
      "compressed": true,
      "size": 194,
    },
  ],
  [
    "async.js.gz",
    136,
    {
      "compressed": true,
      "size": 136,
    },
  ],
  [
    "main.js",
    16205,
    {
      "javascriptModule": false,
      "related": {
        "brotliCompressed": "main.js.br",
        "customed": "main.js.custom",
        "gzipped": "main.js.gz",
      },
      "size": 16205,
    },
  ],
  [
    "main.js.br",
    3552,
    {
      "compressed": true,
      "size": 3552,
    },
  ],
  [
    "main.js.custom",
    16205,
    {
      "compressed": true,
      "size": 16205,
    },
  ],
  [
    "main.js.gz",
    4074,
    {
      "compressed": true,
      "size": 4074,
    },
  ],
]
`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true" with multiple plugins: errors 1`] = `[]`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true" with multiple plugins: errors 2`] = `[]`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true" with multiple plugins: warnings 1`] = `[]`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true" with multiple plugins: warnings 2`] = `[]`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true": assets 1`] = `
[
  [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    {
      "immutable": true,
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    {
      "immutable": true,
      "related": {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    390,
    {
      "compressed": true,
      "immutable": true,
      "size": 390,
    },
  ],
  [
    "async.js",
    194,
    {
      "javascriptModule": false,
      "related": {
        "gzipped": "async.js.gz",
      },
      "size": 194,
    },
  ],
  [
    "async.js.gz",
    136,
    {
      "compressed": true,
      "size": 136,
    },
  ],
  [
    "main.js",
    16205,
    {
      "javascriptModule": false,
      "related": {
        "gzipped": "main.js.gz",
      },
      "size": 16205,
    },
  ],
  [
    "main.js.gz",
    4074,
    {
      "compressed": true,
      "size": 4074,
    },
  ],
]
`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true": assets 2`] = `
[
  [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    {
      "immutable": true,
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    {
      "immutable": true,
      "related": {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    390,
    {
      "compressed": true,
      "immutable": true,
      "size": 390,
    },
  ],
  [
    "async.js",
    194,
    {
      "javascriptModule": false,
      "related": {
        "gzipped": "async.js.gz",
      },
      "size": 194,
    },
  ],
  [
    "async.js.gz",
    136,
    {
      "compressed": true,
      "size": 136,
    },
  ],
  [
    "main.js",
    16205,
    {
      "javascriptModule": false,
      "related": {
        "gzipped": "main.js.gz",
      },
      "size": 16205,
    },
  ],
  [
    "main.js.gz",
    4074,
    {
      "compressed": true,
      "size": 4074,
    },
  ],
]
`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true": errors 1`] = `[]`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true": errors 2`] = `[]`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true": warnings 1`] = `[]`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true": warnings 2`] = `[]`;

exports[`CompressionPlugin should work and use memory cache without options in the "development" mode: assets 1`] = `
[
  [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    {
      "immutable": true,
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    {
      "immutable": true,
      "related": {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    390,
    {
      "compressed": true,
      "immutable": true,
      "size": 390,
    },
  ],
  [
    "async.async.55e6e9a872bcc7d4b226.js",
    194,
    {
      "chunkhash": "55e6e9a872bcc7d4b226",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "gzipped": "async.async.55e6e9a872bcc7d4b226.js.gz",
      },
      "size": 194,
    },
  ],
  [
    "async.async.55e6e9a872bcc7d4b226.js.gz",
    136,
    {
      "compressed": true,
      "immutable": true,
      "size": 136,
    },
  ],
  [
    "main.4d75ca3dcb0ac1fb976b.js",
    16252,
    {
      "chunkhash": "4d75ca3dcb0ac1fb976b",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "gzipped": "main.4d75ca3dcb0ac1fb976b.js.gz",
      },
      "size": 16252,
    },
  ],
  [
    "main.4d75ca3dcb0ac1fb976b.js.gz",
    4097,
    {
      "compressed": true,
      "immutable": true,
      "size": 4097,
    },
  ],
]
`;

exports[`CompressionPlugin should work and use memory cache without options in the "development" mode: assets 2`] = `
[
  [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    {
      "immutable": true,
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    {
      "immutable": true,
      "related": {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    390,
    {
      "compressed": true,
      "immutable": true,
      "size": 390,
    },
  ],
  [
    "async.async.55e6e9a872bcc7d4b226.js",
    194,
    {
      "chunkhash": "55e6e9a872bcc7d4b226",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "gzipped": "async.async.55e6e9a872bcc7d4b226.js.gz",
      },
      "size": 194,
    },
  ],
  [
    "async.async.55e6e9a872bcc7d4b226.js.gz",
    136,
    {
      "compressed": true,
      "immutable": true,
      "size": 136,
    },
  ],
  [
    "main.4d75ca3dcb0ac1fb976b.js",
    16252,
    {
      "chunkhash": "4d75ca3dcb0ac1fb976b",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "gzipped": "main.4d75ca3dcb0ac1fb976b.js.gz",
      },
      "size": 16252,
    },
  ],
  [
    "main.4d75ca3dcb0ac1fb976b.js.gz",
    4097,
    {
      "compressed": true,
      "immutable": true,
      "size": 4097,
    },
  ],
]
`;

exports[`CompressionPlugin should work and use memory cache without options in the "development" mode: errors 1`] = `[]`;

exports[`CompressionPlugin should work and use memory cache without options in the "development" mode: errors 2`] = `[]`;

exports[`CompressionPlugin should work and use memory cache without options in the "development" mode: warnings 1`] = `[]`;

exports[`CompressionPlugin should work and use memory cache without options in the "development" mode: warnings 2`] = `[]`;

exports[`CompressionPlugin should work child compilations: assets 1`] = `
[
  [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    {
      "immutable": true,
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    {
      "immutable": true,
      "related": {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    390,
    {
      "compressed": true,
      "immutable": true,
      "size": 390,
    },
  ],
  [
    "async.async.js.gz",
    136,
    {
      "compressed": true,
      "immutable": true,
      "size": 136,
    },
  ],
  [
    "async.async.js?ver=cd3aed5809a2faa4eb5a",
    194,
    {
      "contenthash": "cd3aed5809a2faa4eb5a",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "gzipped": "async.async.js.gz",
      },
      "size": 194,
    },
  ],
  [
    "copied.js",
    400,
    {
      "copied": true,
      "related": {
        "gzipped": "copied.js.gz",
      },
      "size": 400,
    },
  ],
  [
    "copied.js.gz",
    29,
    {
      "compressed": true,
      "size": 29,
    },
  ],
  [
    "main.js.gz",
    4096,
    {
      "compressed": true,
      "immutable": true,
      "size": 4096,
    },
  ],
  [
    "main.js?var=0a87c3c4fe1e7ed81f37",
    16253,
    {
      "contenthash": "0a87c3c4fe1e7ed81f37",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "gzipped": "main.js.gz",
      },
      "size": 16253,
    },
  ],
]
`;

exports[`CompressionPlugin should work child compilations: errors 1`] = `[]`;

exports[`CompressionPlugin should work child compilations: warnings 1`] = `[]`;

exports[`CompressionPlugin should work with 'webpack-stats-plugin': assets 1`] = `
[
  [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    {
      "immutable": true,
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    {
      "immutable": true,
      "related": {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    390,
    {
      "compressed": true,
      "immutable": true,
      "size": 390,
    },
  ],
  [
    "async.async.55e6e9a872bcc7d4b226.js",
    194,
    {
      "chunkhash": "55e6e9a872bcc7d4b226",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "gzipped": "async.async.55e6e9a872bcc7d4b226.js.gz",
      },
      "size": 194,
    },
  ],
  [
    "async.async.55e6e9a872bcc7d4b226.js.gz",
    136,
    {
      "compressed": true,
      "immutable": true,
      "size": 136,
    },
  ],
  [
    "main.4d75ca3dcb0ac1fb976b.js",
    16252,
    {
      "chunkhash": "4d75ca3dcb0ac1fb976b",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "gzipped": "main.4d75ca3dcb0ac1fb976b.js.gz",
      },
      "size": 16252,
    },
  ],
  [
    "main.4d75ca3dcb0ac1fb976b.js.gz",
    4097,
    {
      "compressed": true,
      "immutable": true,
      "size": 4097,
    },
  ],
  [
    "stats.json",
    155,
    {
      "size": 155,
    },
  ],
]
`;

exports[`CompressionPlugin should work with 'webpack-stats-plugin': errors 1`] = `[]`;

exports[`CompressionPlugin should work with 'webpack-stats-plugin': warnings 1`] = `[]`;

exports[`CompressionPlugin should work with assets info: assets 1`] = `
[
  [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    {
      "immutable": true,
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    {
      "immutable": true,
      "related": {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    390,
    {
      "compressed": true,
      "immutable": true,
      "size": 390,
    },
  ],
  [
    "async.async.js.gz",
    136,
    {
      "compressed": true,
      "immutable": true,
      "size": 136,
    },
  ],
  [
    "async.async.js?ver=ff0ad4032ae148f14da4",
    194,
    {
      "contenthash": "ff0ad4032ae148f14da4",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "gzipped": "async.async.js.gz",
      },
      "size": 194,
    },
  ],
  [
    "copied.js",
    400,
    {
      "copied": true,
      "related": {
        "gzipped": "copied.js.gz",
      },
      "size": 400,
    },
  ],
  [
    "copied.js.gz",
    29,
    {
      "compressed": true,
      "size": 29,
    },
  ],
  [
    "main.js.gz",
    4151,
    {
      "compressed": true,
      "immutable": true,
      "size": 4151,
    },
  ],
  [
    "main.js.map.gz",
    4240,
    {
      "compressed": true,
      "size": 4240,
    },
  ],
  [
    "main.js.map?var=003525b9f8560302be81",
    13288,
    {
      "development": true,
      "related": {
        "gzipped": "main.js.map.gz",
      },
      "size": 13288,
    },
  ],
  [
    "main.js?var=003525b9f8560302be81",
    16314,
    {
      "contenthash": "003525b9f8560302be81",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "gzipped": "main.js.gz",
        "sourceMap": "main.js.map?var=003525b9f8560302be81",
      },
      "size": 16314,
    },
  ],
]
`;

exports[`CompressionPlugin should work with assets info: errors 1`] = `[]`;

exports[`CompressionPlugin should work with assets info: warnings 1`] = `[]`;

exports[`CompressionPlugin should work with multiple plugins: assets 1`] = `
[
  [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    {
      "immutable": true,
      "related": {
        "compressed": "09a1a1112c577c2794359715edfcb5ac.png.compress",
        "customed": "09a1a1112c577c2794359715edfcb5ac.png.custom?foo=bar#hash",
      },
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  [
    "09a1a1112c577c2794359715edfcb5ac.png.compress",
    78117,
    {
      "compressed": true,
      "immutable": true,
      "size": 78117,
    },
  ],
  [
    "09a1a1112c577c2794359715edfcb5ac.png.custom?foo=bar#hash",
    78117,
    {
      "compressed": true,
      "immutable": true,
      "size": 78117,
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    {
      "immutable": true,
      "related": {
        "brotliCompressed": "23fc1d3ac606d117e05a140e0de79806.svg.br",
        "compressed": "23fc1d3ac606d117e05a140e0de79806.svg.compress",
        "customed": "23fc1d3ac606d117e05a140e0de79806.svg.custom?foo=bar#hash",
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg.br",
    363,
    {
      "compressed": true,
      "immutable": true,
      "size": 363,
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg.compress",
    672,
    {
      "compressed": true,
      "immutable": true,
      "size": 672,
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg.custom?foo=bar#hash",
    672,
    {
      "compressed": true,
      "immutable": true,
      "size": 672,
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    390,
    {
      "compressed": true,
      "immutable": true,
      "size": 390,
    },
  ],
  [
    "async.async.js.br",
    123,
    {
      "compressed": true,
      "immutable": true,
      "size": 123,
    },
  ],
  [
    "async.async.js.compress",
    194,
    {
      "compressed": true,
      "immutable": true,
      "size": 194,
    },
  ],
  [
    "async.async.js.custom?foo=bar#hash",
    194,
    {
      "compressed": true,
      "immutable": true,
      "size": 194,
    },
  ],
  [
    "async.async.js.gz",
    136,
    {
      "compressed": true,
      "immutable": true,
      "size": 136,
    },
  ],
  [
    "async.async.js?ver=cd3aed5809a2faa4eb5a",
    194,
    {
      "contenthash": "cd3aed5809a2faa4eb5a",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "brotliCompressed": "async.async.js.br",
        "compressed": "async.async.js.compress",
        "customed": "async.async.js.custom?foo=bar#hash",
        "gzipped": "async.async.js.gz",
      },
      "size": 194,
    },
  ],
  [
    "main.js.br",
    3587,
    {
      "compressed": true,
      "immutable": true,
      "size": 3587,
    },
  ],
  [
    "main.js.compress",
    16256,
    {
      "compressed": true,
      "immutable": true,
      "size": 16256,
    },
  ],
  [
    "main.js.custom?foo=bar#hash",
    16256,
    {
      "compressed": true,
      "immutable": true,
      "size": 16256,
    },
  ],
  [
    "main.js.gz",
    4100,
    {
      "compressed": true,
      "immutable": true,
      "size": 4100,
    },
  ],
  [
    "main.js?var=06e61e38e09e626f352e",
    16256,
    {
      "contenthash": "06e61e38e09e626f352e",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "brotliCompressed": "main.js.br",
        "compressed": "main.js.compress",
        "customed": "main.js.custom?foo=bar#hash",
        "gzipped": "main.js.gz",
      },
      "size": 16256,
    },
  ],
]
`;

exports[`CompressionPlugin should work with multiple plugins: errors 1`] = `[]`;

exports[`CompressionPlugin should work with multiple plugins: warnings 1`] = `[]`;

exports[`CompressionPlugin should work: assets 1`] = `
[
  [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    {
      "immutable": true,
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    {
      "immutable": true,
      "related": {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    390,
    {
      "compressed": true,
      "immutable": true,
      "size": 390,
    },
  ],
  [
    "async.async.js.gz",
    136,
    {
      "compressed": true,
      "immutable": true,
      "size": 136,
    },
  ],
  [
    "async.async.js?ver=cd3aed5809a2faa4eb5a",
    194,
    {
      "contenthash": "cd3aed5809a2faa4eb5a",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "gzipped": "async.async.js.gz",
      },
      "size": 194,
    },
  ],
  [
    "main.js.gz",
    4100,
    {
      "compressed": true,
      "immutable": true,
      "size": 4100,
    },
  ],
  [
    "main.js?var=06e61e38e09e626f352e",
    16256,
    {
      "contenthash": "06e61e38e09e626f352e",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "gzipped": "main.js.gz",
      },
      "size": 16256,
    },
  ],
]
`;

exports[`CompressionPlugin should work: errors 1`] = `[]`;

exports[`CompressionPlugin should work: warnings 1`] = `[]`;
